2002-01-31  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/move.c (moveLoop):
	while moving if Mod1 (Alt/Meta) is pressed ignore snap attraction

2002-01-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (CMD_Delete):
	(CMD_Close):
	(CMD_Destroy):
	don't crash fvwm when trying to close a tear off menu

	* fvwm/decorations.c (is_function_allowed):
	* fvwm/menus.c (menu_expose):
	(do_menu):
	* fvwm/events.c (HandleReparentNotify):
	(HandleUnmapNotify):
	* fvwm/add_window.c (AddWindow):
	(AddWindow):
	* fvwm/fvwm.h (struct):
	* fvwm/add_window.c (CaptureAllWindows):
	(CaptureOneWindow):
	* fvwm/events.h (flush_property_notify):
	* fvwm/events.c (HandleMapRequestKeepRaised):
	started work on tear off menus

	* fvwm/fvwm.c (main):
	* fvwm/events.c (CMD_Sync):
	(CMD_Synchronize):
	* fvwm/commands.h (CMD_Synchronize):
	* fvwm/functions.h (enum):
	* fvwm/functions.c (func_config):
	new commands XSync and XSynchronize for debugging

	* fvwm/conditional.c (CreateConditionMask):
	(MatchesConditionMask):
	* fvwm/builtins.c (CMD_State):
	* fvwm/fvwm.h (struct):
	* fvwm/functions.h:
	* fvwm/commands.h:
	* fvwm/functions.c (func_config):
	new command "State"
	new condition "State"

	* libs/queue.c:
	fixed core dump

2002-01-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (AddToMessageQueue):
	(initModules):
	(DeleteMessageQueueBuff):
	(FlushMessageQueue):
	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_interface.c (AddToCommandQueue):
	(ExecuteCommandQueue):
	use code from queue.c

	* fvwm/schedule.c:
	* fvwm/queue.c:
	* fvwm/queue.h:
	* fvwm/events.c (My_XNextEvent):
	"Schedule 0" commands are executed before event handling
	moved some of the chedule code into a new queue library

2002-01-30  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FInitLocale): Fixed a miss print in an error msg

2002-01-30  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c:
	* libs/Flocale.h:
	* libs/Makefile.am:
	* fvwm/fvwm.c (main):