@@ -21,4 +21,4 @@ int squeue_get_next_ms(void);
 int squeue_get_next_id(void);
 int squeue_get_last_id(void);
 
-#endif SCHEDULE_H
+#endif /* SCHEDULE_H */
