@@ -313,8 +313,8 @@ char *get_version_string()
 {
   /* migo (14-Mar-2001): it is better to manually update a version string
    * in the stable branch, othervise saving sessions becomes useless */
-  /*return CatString3(VERSION, ", ",__DATE__);*/
-  return "2.5-4";
+  return CatString3(VERSION, ", ", __DATE__);
+  /* return "2.6-0"; */
 }
 
 /*
