@@ -1,3 +1,8 @@
+2002-01-31  Mikhael Goikhman  <migo@homemail.com>
+
+	* FvwmForm/FvwmForm.c (main):
+	remove compatibility support for dot-named aliases
+
 2002-01-30  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmWinList/FvwmWinList.c (main):
