@@ -4,6 +4,9 @@
 	* Makefile.am:
 	use the same generation as for other perl scripts
 
+	* BuildXLockMenu:
+	remove compatibility script
+
 2002-01-21  olicha  <olivier.chapuis@free.fr>
 
 	* xpmroot.c (main):
