@@ -4,6 +4,16 @@
 	* fvwm/move.c (moveLoop):
 	while moving if Mod1 (Alt/Meta) is pressed ignore snap attraction
 
+	* fvwm/session.c (get_version_string):
+	switch from static to date-based version string
+
+	* configure.in:
+	remove --enable-kanji compatibility option
+
+	* fvwm/schedule.h:
+	* libs/queue.h:
+	fix warnings, gcc compains on having something after #endif
+
 2002-01-31  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/builtins.c (CMD_Delete):
